syntax = "proto3";
option go_package = "../protocol";

service KVService {
  rpc Put (PutRequest) returns (PutResponse) {
  }
  rpc Get (GetRequest) returns (GetResponse) {
  }
}
// 请求信息
message PutRequest {
  bytes key = 1;
  bytes val = 2;
}

// 响应信息
message PutResponse{
  bool ack = 1;
  string message = 2;
}

// 请求信息
message GetRequest {
  bytes key = 1;
}

// 响应信息
message GetResponse {
  bytes data = 4;
}

